--- a/inst/rmarkdown/templates/present/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/present/skeleton/skeleton.Rmd
@@ -1,17 +1,18 @@
 ---
-title: {{ PRESENT_TITLE }}
+title: {{{ TITLE }}}
+output: {{{ OUTPUT_FORMAT }}}
 params: 
   inputDir: "analyzed/"
   thisDir:  "present/"
   outputDir: "presented/"
-  fileStem: "{{ PRESENT_STEM }}"
+  fileStem: {{{ FILE_STEM }}}
   inputFiles: 
-    - {{ INPUT_FILES }}
+    {{{ INPUT_FILES }}}
 ---
 
 ```{r KnitrOpts, echo=FALSE}
 knitr::opts_knit$set(root.dir = normalizePath('../'))
-knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE, error=TRUE)
+knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE, error=TRUE, results='asis')
 ```
 
 ```{r Load, results='hide'}
@@ -21,10 +22,15 @@ loadedObjects <- ls()
 loadedObjects <- loadedObjects[loadedObjects != "params"]
 ```
 
-Analyze some data!
+```{r}
+# Present some data!
+```
 
 ```{r Save}
+allGood <- TRUE
 
-save(file = paste0(params$outputDir, params$fileStem, ".rda")
-     , list = c(lstPlots, lstDfs, lstFits))
+if (allGood) {
+  save(file = paste0(params$outputDir, params$fileStem, ".rda")
+     , list = allGood)
+}
 ```
