--- a/inst/rmarkdown/templates/gather/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/gather/skeleton/skeleton.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo=TRUE, message=TRUE, warning=TRUE, error=TRUE)
 ```
 
 ```{r}
-Gather some data!
+# Gather some data!
 ```
 
 ```{r CollectDataFrames}
