--- a/inst/rmarkdown/templates/analyze/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/analyze/skeleton/skeleton.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE, error=TRUE)
 ```
 
 ```{r Load, results='hide'}
-loadedObjects <- represtools::LoadInput(params)
+loadedObjects <- represtools::LoadObjects(params)
 ```
 
 ```{r}
