--- a/inst/rmarkdown/templates/cook/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/cook/skeleton/skeleton.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo=TRUE, message=TRUE, warning=TRUE, error=TRUE)
 ```
 
 ```{r Load, results='hide'}
-loadedObjects <- represtools::LoadInput(params)
+loadedObjects <- represtools::LoadObjects(params)
 ```
 
 ```{r}
