--- a/inst/rmarkdown/templates/gather/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/gather/skeleton/skeleton.Rmd
@@ -16,8 +16,8 @@ knitr::opts_chunk$set(echo=TRUE, message=TRUE, warning=TRUE, error=TRUE)
 # Gather some data!
 ```
 
-```{r GatherObjects}
-lstObjects <- represtools::GatherObjects()
+```{r ListObjects}
+lstObjects <- represtools::ListObjects() %>% represtools::NamesToObjects()
 represtools::DescribeObjects(lstObjects)
 ```
 
