--- a/inst/rmarkdown/templates/gather/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/gather/skeleton/skeleton.Rmd
@@ -17,8 +17,8 @@ knitr::opts_chunk$set(echo=TRUE, message=TRUE, warning=TRUE, error=TRUE)
 ```
 
 ```{r ListObjects}
-lstObjects <- represtools::ListObjects() %>% represtools::NamesToObjects()
-represtools::DescribeObjects(lstObjects)
+lstObjects <- represtools::ListObjects()
+represtools::DescribeObjects(represtools::NamesToObjects(lstObjects))
 ```
 
 ```{r Save}
